--- a/2016/game_of_life/package.json
+++ b/2016/game_of_life/package.json
@@ -1,11 +1,15 @@
 {
   "name": "run_js",
   "scripts": {
-    "start": "node src/main.js",
+    "start": "concurrently \"browserify src/main.js > src/static/bundle.js\" \"node src/server.js\"",
     "test": "jasmine JASMINE_CONFIG_PATH=spec/config/jasmine.json"
   },
   "dependencies": {
     "jasmine": "^2.5.2",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "concurrently": "^3.4.0",
+    "watchify": "^3.9.0"
   }
 }
